<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/detail_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@android:color/holo_blue_bright"/>
            <LinearLayout
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/detail_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_gorden"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/detail_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/detail_solded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_299_terjual"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/detail_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_4_9_5_0"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                android:id="@+id/detail_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_gorden"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/review_pembeli"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pengguna_1"
                    android:textColor="@android:color/holo_red_dark"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barang_sangat_bagus"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pengguna_2"
                    android:textColor="@android:color/holo_red_dark"/>
                <TextView
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saya_sangat_puas"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>