<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        tools:src="@android:color/holo_blue_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/gorden_type" />

        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/price" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Rating" />

            <Button
                android:id="@+id/detail_btn"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:text="@string/detail"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"/>
            <Button
                android:id="@+id/order_btn"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/order"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>